--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div id="game-container">
         <div id="ball"></div>
-        <div id="goal"></div>
+        <div class="goal"></div>
+        <div class="goal"></div>
+        <div class="goal"></div>
     </div>
     <script src="script.js"></script>
 </body>
