--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roll a Ball</title>
-    <link rel="stylesheet" href="style.css">
+    <title>KAKNERBALLS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="start-screen">
-        <h1>Roll a Ball</h1>
-        <button id="start-btn">Start Game</button>
-    </div>
     <div id="game-container">
-        <div id="play-area">
-            <div id="ball"></div>
-            <div class="goal"></div>
-            <div class="goal"></div>
-            <div class="goal"></div>
-        </div>
-        <div id="score">Score: <span id="score-value">0</span></div>
+        <div id="ball"></div>
+        <div class="goal"></div>
+        <div class="goal"></div>
+        <div class="goal"></div>
     </div>
     <script src="script.js"></script>
 </body>
